--- a/openvpn/defaults/main.yml
+++ b/openvpn/defaults/main.yml
@@ -21,4 +21,4 @@ openvpn_c_city: Moscow
 openvpn_c_organization: Corp
 openvpn_c_ou: CU
 
-openvpn_local_config_dir: "{{ inventory_hostname }}-openvpn-profiles
+openvpn_local_config_dir: "{{ inventory_hostname }}-openvpn-profiles"
