--- a/hostname/tasks/main.yml
+++ b/hostname/tasks/main.yml
@@ -7,7 +7,7 @@
   lineinfile:
     path: /etc/hosts
     regexp: "^{{ item }}"
-    line: "{{ item }} localhost {{ hostname | default(ansible_hostname) }}"
+    line: "{{ item }} localhost {{ hostname | default(inventory_hostname) }}"
     create: yes
   with_items:
     - 127.0.0.1
