--- a/acetv/tasks/main.yml
+++ b/acetv/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Create acetv group
+  group:
+    name: "{{ acetv_group }}"
+
 - name: Create acetv user
   user:
     name: "{{ acetv_user }}"
@@ -52,7 +56,6 @@
   template:
     src: "{{ role_path }}/files/etc/nginx/conf.d/acetv.conf.j2"
     dest: "/etc/nginx/conf.d/{{ role_name }}.conf"
-    validate: nginx -t -c %s
     owner: root
     group: root
     mode: 0644
