Tools role changed due to ansible changes

--- a/tools/tasks/main.yml
+++ b/tools/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
 - name: Install tools and utilites
   apt:
-    name: "{{ item }}"
-    state: present
-  with_items:
+    name:
     - "{{ tools }}"
     - "{{ tools_additional }}"
+    state: present
